layout bugado

--- a/LayoutTrilha.css
+++ b/LayoutTrilha.css
@@ -66,6 +66,7 @@ a {
     width: 94.7%;
 }
 .aba.vi{
+    width: 44.7%;
     height: 265px;
 }
 .aba.iv{
